--- a/Executable/v2.0/EnviromentTest.ipynb
+++ b/Executable/v2.0/EnviromentTest.ipynb
@@ -204,7 +204,8 @@
     "Difference between Decision Steps and Terminal Steps is that terminal step only calls on episode end, while \n",
     "decision step can be called at anytime.\n",
     "- Decision Steps: `env.get_steps()` get the steps from agents calling <br />\n",
-    "- Agent ID: `steps.agent_id()` get the agents id corresponding to the step <br />"
+    "- Agent ID: `steps.agent_id()` get the agents id corresponding to the step <br />\n",
+    "- `len(DecisionSteps)`: Returns the number of agents requesting a decision since the last call to env.step()"
    ]
   },
   {
