--- a/Executable/v2.0/EnviromentTest.ipynb
+++ b/Executable/v2.0/EnviromentTest.ipynb
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "# Since there's only one agent, get the first on the list\n",
+    "# Since there's only one behavior, get the first on the list\n",
     "behavior_name = list(env.behavior_specs)[0]\n",
     "print(f\"Name of the behavior : {behavior_name}\")\n",
     "spec = env.behavior_specs[behavior_name]\n",
@@ -203,7 +203,7 @@
     "Decision Steps and Terminal Steps are the list that agents called for the need of decision.<br />\n",
     "Difference between Decision Steps and Terminal Steps is that terminal step only calls on episode end, while \n",
     "decision step can be called at anytime.\n",
-    "- Decision Steps: `env.get_steps()` get the steps from agents calling <br />\n",
+    "- Decision Steps: `env.get_steps(Behavior_Name:str)` get the steps from agents requested of the behavior<br />\n",
     "- Agent ID: `steps.agent_id()` get the agents id corresponding to the step <br />\n",
     "- `len(DecisionSteps)`: Returns the number of agents requesting a decision since the last call to env.step()"
    ]
